2005-01-19  Per Bothner  <per@bothner.com>

	* Access.java (CLASS_MODIFIERS, FIELD_MODIFIERS, METHOD_MODIFIERS):
	New bit-mask constants.
	(toString): Mask off inappropriate flags.

	* ClassTypeWriter.java: Make some methods public.

2005-01-15  Per Bothner  <per@bothner.com>

	* Access.java (BRIDGE, VARARGS, STRICT, SYNTHETIC, ANNOTATION):
	Add new JDK 1.4 and 1.5 modifiers.
	(toString(int,char)):  Update for new flags.

	* Type.java (setName): New protected method.
	* ObjectType.java (<init>(String)): Make public.  It makes more sense
	for "funny" types like NodeType to be ObjectType but not ClassType.
	To be used for gnu.NodeType.
	* ClassType.java (setName): Stylistic improvement.

2005-01-09  Per Bothner  <per@bothner.com>

	* ClassType.java (writeExternal): Simplify. Non-existing classes
	are now handled specialy in LitTable.

2005-01-05  Per Bothner  <per@bothner.com>

	* Type.java (array_type): New field.
	* ArrayType.java (make(Type)): Use array_type of argument.
	(make(String)): New non-public static method.
	* Type.java (getType): Use ArrayType.make(String).
	(signatureToType): Use ArrayType.make(Type).

	* Type.java (hashCode): New method.

	* ClassType.java (getDeclaredMethod): Compare argument types
	by comparing signatures, not only by identity.

2005-01-02  Per Bothner  <per@bothner.com>

	* ObjectType.java: Change "select" (preprocessor) syntax.

2004-12-30  Per Bothner  <per@bothner.com>

	* ClassFileInput.java (readAttribute): Link in scopes read from
	LocalVariableTable table into Scope tree structure.

	* Variable.java (shouldEmit): Trivial performance fix

2004-12-29  Per Bothner  <per@bothner.com>

	* Type.java (setReflectClass): New method.

2004-12-25  Per Bothner  <per@bothner.com>

	* SourceDebugExtAttr.java (addFile): Clear curLineIndex "cache".

2004-12-24  Per Bothner  <per@bothner.com>

	* Method.java (compile_linenumber): Remove no-longer used method.

	* ClassType.java (setSourceFile): Fix off-by-one error.
