@@ -1,3 +1,9 @@
+2005-01-28  Per Bothner  <per@bothner.com>
+
+	* Type.java (java_lang_Class_type):  New static field.
+
+	* CodeAttr.java (emitPushClass): New method.
+
 2005-01-19  Per Bothner  <per@bothner.com>
 
 	* Access.java (CLASS_MODIFIERS, FIELD_MODIFIERS, METHOD_MODIFIERS):
